--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,18 +1,19 @@
 version: '0.2'
 phases:
   install:
-    runtime-versions:
+    runtime-version:
       nodejs: 12
-    pre_build:
-      commands:
-        - echo 'Prebuilding, installing npm dependencies'
-        - npm install
-    buil:
-      commands:
-        - echo 'Starting the buil step'
-        - npm run build:prod
+  pre_build:
+    commands:
+      - echo "Prebuilding, installing npm dependencies"
+      - cd aplicacion
+      - npm install
+  build:
+    commands:
+      - echo "Starting the build step"
+      - npm run build:prod
 artifacts:
   name: 'BuildOutput'
   files:
     - '**/*'
-  base-directory: 'dist/ambulance'
+  base-directory: '/dist/ambulance'
