--- a/package.json
+++ b/package.json
@@ -23,12 +23,16 @@
     "@angular/platform-browser": "~12.0.4",
     "@angular/platform-browser-dynamic": "~12.0.4",
     "@angular/router": "~12.0.4",
+    "@swimlane/ngx-charts": "^20.1.2",
+    "@types/socket.io-client": "^1.4.32",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "ng-recaptcha": "^8.0.1",
     "ngx-scrollbar": "^8.0.0",
+    "ngx-webcam": "^0.4.1",
     "pdfmake": "^0.1.68",
     "rxjs": "~6.6.0",
+    "socket.io-client": "^2.1.1",
     "xlsx": "^0.18.5",
     "zone.js": "~0.11.4"
   },
