--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "~12.0.4",
     "@angular/router": "~12.0.4",
     "@swimlane/ngx-charts": "^20.1.2",
+    "@types/d3": "^7.4.0",
     "@types/socket.io-client": "^1.4.32",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
