--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@swimlane/ngx-charts": "^20.1.2",
     "@types/d3": "^7.4.0",
     "@types/socket.io-client": "^1.4.32",
+    "angularx-social-login": "^4.1.0",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "ng-recaptcha": "^8.0.1",
